# memfs

./: .gitignore  CMakeLists.txt  readme.md
include/: filesystem.h  typedefs.h  utils.h
src/: directory.cpp  file.cpp  filesystem.cpp  main.cpp  node.cpp
temp/: a  lol
